Reverted to adding hidden overflow as hack to avoid collapsing margins.

--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -420,6 +420,8 @@ input:disabled, textarea:disabled {
   margin: 0 auto;
 
   .Body {
+    overflow: hidden;
+    
     @media (max-width: $screen-sm-min) {
       margin-top: 57px;
     }
